--- a/app/servicios/templates/servicios/crear_servicio.html
+++ b/app/servicios/templates/servicios/crear_servicio.html
@@ -25,8 +25,12 @@
                 <input type="number" class="form-control" id="precio_oferta" name="precio_oferta" placeholder="Ingrese el precio de oferta" step="0.01" min="0">
             </div>
             <div class="mb-3">
-                <label for="rubro" class="form-label">Rubro</label>
-                <input type="text" class="form-control" id="rubro" value="{{ rubro.nombre }}" disabled>
+                <label for="telefono" class="form-label">Teléfono</label>
+                <input type="tel" class="form-control" id="telefono" name="telefono" placeholder="Ingrese el teléfono" pattern="[0-9]{9}" title="Debe contener 9 dígitos" required>
+            </div>
+            <div class="mb-3">
+                <label for="correo" class="form-label">Correo</label>
+                <input type="email" class="form-control" id="correo" name="correo" placeholder="Ingrese el correo" required>
             </div>
             <div class="mb-3">
                 <label for="imagen" class="form-label">Imagen del Servicio</label>
