--- a/app/servicios/templates/servicios/editar_servicio.html
+++ b/app/servicios/templates/servicios/editar_servicio.html
@@ -25,6 +25,14 @@
                 <input type="number" class="form-control" id="precio_oferta" name="precio_oferta" value="{{ servicio.precio_oferta }}" placeholder="Ingrese el precio de oferta" step="0.01" min="0">
             </div>
             <div class="mb-3">
+                <label for="telefono" class="form-label">Teléfono</label>
+                <input type="tel" class="form-control" id="telefono" name="telefono" value="{{ servicio.telefono }}" placeholder="Ingrese el teléfono" pattern="[0-9]{9}" title="Debe contener 9 dígitos" required>
+            </div>
+            <div class="mb-3">
+                <label for="correo" class="form-label">Correo</label>
+                <input type="email" class="form-control" id="correo" name="correo" value="{{ servicio.correo }}" placeholder="Ingrese el correo" required>
+            </div>
+            <div class="mb-3">
                 <label for="rubro" class="form-label">Rubro</label>
                 <input type="text" class="form-control" id="rubro" value="{{ rubro.nombre }}" disabled>
             </div>
@@ -41,7 +49,7 @@
                 <p>No hay imagen cargada.</p>
             </div>
             {% endif %}
-            <!-- Campo de Imagen-->
+            <!-- Campo de Imagen -->
             <div class="mb-3">
                 <label for="imagen" class="form-label">Nueva Imagen del Servicio</label>
                 <input type="file" class="form-control" id="imagen" name="imagen" accept="image/*" onchange="previewImage(event)">
@@ -82,4 +90,5 @@
 </script>
 
 {% endblock %}
+
 
